refactor: enhance null safety and robustness in TreeSitter analyzers
- Add `@Nullable` annotations and null checks for `TSNode` root and type
  accesses across multiple language analyzers.
- Improve safety of `tree.getRootNode()` calls to prevent potential NPEs.
- Refactor `JavaAnalyzer` to use a constant set for access type checks.
- Standardize identifier extraction patterns in `CppAnalyzer` and `GoAnalyzer`.